--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 	  <input id="fourth" type="text" validate='url' validate-message='Invalid URL' placeholder="URL">
 	</div>
     <div>
-        <input  type="text" validate='length-min-10' validate-message='Minimal length is 10 symbols' placeholder="Any">
+        <input  type="text" validate='length-min-10' validate-message='Minimal length is 10 symbols' placeholder="Min 10 symbols">
+    </div>
+    <div>
+        <textarea validate='length-max-10' validate-message='Maximal length is 10 symbols' cols="30" rows="10" placeholder="Max 10 symbols"></textarea>
     </div>
 
 	<script type="text/javascript" src="js/validator.js"></script>
