Fix textarea placeholder

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input  type="text" validate='length-min' validator-length-min="10" validate-message='Minimal length is 10 symbols' placeholder="Min 10 symbols">
     </div>
     <div>
-        <textarea validate='length-max length-min letters' validator-length-max="15" validator-length-min="10" validate-message='Message length must be between 10 and 15 letters' cols="30" rows="10" placeholder="Max 15 symbols"></textarea>
+        <textarea validate='length-max length-min letters' validator-length-max="15" validator-length-min="10" validate-message='Message length must be between 10 and 15 letters' cols="30" rows="10" placeholder="Message between 10 and 15 letters"></textarea>
     </div>
     <div>
         <button id="check">Check</button>
