JSDV 0.0.2.2 add IE8+ support

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Validator test</title>
 	<link rel="stylesheet" type="text/css" href="css/validator.css">
+    <script type="text/javascript" src="js/validator.js"></script>
 </head>
 <body>
 	<div>
@@ -27,7 +30,6 @@
     <div>
         <button id="check">Check</button>
     </div>
-	<script type="text/javascript" src="js/validator.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
