--- a/index.html
+++ b/index.html
@@ -9,23 +9,28 @@
 </head>
 <body>
 	<div>
-	  <input id="first" type="text" validate='digits' validate-message='Digits only' placeholder="Digits only">
+	  <input id="first" type="text" validate="digits" validate-message="Digits only" placeholder="Digits only">
 	</div>
 	<div>
-	  <input id="second" type="text" validate='letters' validate-message='Letters only' placeholder="Letters only">
+	  <input id="second" type="text" validate="letters" validate-message="Letters only" placeholder="Letters only">
 	</div>
 	<div>
-	  <input id="third" type="text" validate='email' validate-message='Invalid email' validate-error-id='test'  placeholder="Email">
-	  <div id="test" style='color: red; background-color: pink;'></div>
+	  <input id="third" type="text" validate="email" validate-message="Invalid email" validate-error-id="test"  placeholder="Email">
+	  <div id="test" style="color: red; background-color: pink;"></div>
 	</div>
 	<div>
-	  <input id="fourth" type="text" validate='url' validate-message='Invalid URL' placeholder="URL">
+	  <input id="fourth" type="text" validate="url" validate-message="Invalid URL" placeholder="URL">
 	</div>
     <div>
-        <input  type="text" validate='length-min' validator-length-min="10" validate-message='Minimal length is 10 symbols' placeholder="Min 10 symbols">
+        <input  type="text" validate="length-min" validate-length-min="10" validate-message="Minimal length is 10 symbols" placeholder="Min 10 symbols">
     </div>
     <div>
-        <textarea validate='length-max length-min letters' validator-length-max="15" validator-length-min="10" validate-message='Message length must be between 10 and 15 letters' cols="30" rows="10" placeholder="Message between 10 and 15 letters"></textarea>
+        <textarea validate='length-max length-min letters' validate-length-max="15" validate-length-min="10" validate-message='Message length must be between 10 and 15 letters' cols="30" rows="10" placeholder="Message between 10 and 15 letters"></textarea>
+    </div>
+    <div>
+    	<input id="pass-first" validate="same" validate-with="pass-second" validate-on="pass-first keyup, pass-second keyup" validate-error-id="same-test" validate-message="Passwords do not match" type="password">
+    	<input id="pass-second" type="password">
+    	<div id="same-test" style="color: red; background-color: pink;"></div>
     </div>
     <div>
         <button id="check">Check</button>
